# openenv

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  nextmoves.txt  openenv.yaml  pyproject.toml  reset_resp.json  step_resp.json
server/: Dockerfile  __init__.py  app.py  environment.py  graders.py  scenarios.py  simulation.py
tests/: test_env.py
